Spacing between movies and pagination component fixed

--- a/css/main.css
+++ b/css/main.css
@@ -331,8 +331,8 @@ button {
           align-items: center;
   height: 11.3rem;
   margin-bottom: 6rem;
-  -webkit-box-shadow: 8px 6px 6px rgba(0, 0, 0, 0.4);
-          box-shadow: 8px 6px 6px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.4);
+          box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.4);
   background-color: rgba(0, 0, 0, 0.8);
 }
 
@@ -537,5 +537,18 @@ button {
   height: 44.5rem;
   border-radius: 5px;
   border: 2px dashed #949090;
+}
+
+.pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 5.4rem 0;
 }
 /*# sourceMappingURL=main.css.map */
