--- a/frontend/src/styles/components/_navigation.scss
+++ b/frontend/src/styles/components/_navigation.scss
@@ -5,7 +5,7 @@
 	height: 11.3rem;
 
 	margin-bottom: 6rem;
-	box-shadow: $box-shadow;
+	box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.4);
 
 	background-color: rgba($color: $color-black, $alpha: 0.8);
 
