--- a/frontend/src/styles/components/_pagination.scss
+++ b/frontend/src/styles/components/_pagination.scss
@@ -1,2 +1,7 @@
-.page {
+.pagination {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+
+	padding: 5.4rem 0;
 }
